--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
   </header>
 
   <main>
+  <section id="submit-story" style="max-width:600px; margin:2rem auto;">
+    <h2>Share Your Colorado Story</h2>
+    <p>We’d love to hear how you’re enjoying life in Colorado! Submit your story below.</p>
+    <form action="https://formspree.io/f/xblkydkw" method="POST">
+    <label for="name">Your Name (optional)</label><br>
+    <input type="text" name="name" id="name" placeholder="John Doe" /><br><br>
+
+    <label for="email">Your Email (for review)</label><br>
+    <input type="email" name="_replyto" id="email" required /><br><br>
+
+        <label for="story">Your Story</label><br>
+        <textarea name="story" id="story" rows="8" required placeholder="Write your story here..."></textarea><br><br>
+
+        <button type="submit">Submit Story</button>
+      </form>
+    </section>
     <section>
       <h2>Featured Activities</h2>
       <ul id="activity-list">
