--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>We’d love to hear how you’re enjoying life in Colorado! Submit your story below.</p>
     <form action="https://formspree.io/f/xblkydkw" method="POST">
     <label for="name">Your Name (optional)</label><br>
-    <input type="text" name="name" id="name" placeholder="John Doe" /><br><br>
+    <input type="text" name="name" id="name" placeholder="Colorado Resident" /><br><br>
 
     <label for="email">Your Email (for review)</label><br>
     <input type="email" name="_replyto" id="email" required /><br><br>
@@ -30,7 +30,7 @@
       </form>
     </section>
     <section>
-      <h2>Featured Activities</h2>
+    <h2>Featured Activities</h2>
       <ul id="activity-list">
         <li>Hike Garden of the Gods</li>
         <li>Attend a Free Art Walk in Denver</li>
